--- a/index.html
+++ b/index.html
@@ -4,17 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
     <!-- HEADER -->
-    <header class="header">
 
-    </header>
     <!-- MAIN -->
     <main class="main">
+        <section class="hero-wrapper">
+            <div class="container">
+                <header class="header">
+                    <a class="header__logo" href="#">
+                        <img class="header__img" src="./images/Logo.png" alt="logo" width="197" height="49">
+                    </a>
+                    <!-- NAV -->
+                    <nav class="sitenav">
+                        <ul class="sitenav__list">
+                            <li class="sitenav__item">
+                                <a class="sitenav__link" href="#">Home</a>
+                            </li>
 
+                            <li class="sitenav__item">
+                                <a class="sitenav__link" href="#">Episodes</a>
+                            </li>
+
+                            <li class="sitenav__item">
+                                <a class="sitenav__link" href="#">About</a>
+                            </li>
+
+                            <li class="sitenav__item">
+                                <a class="sitenav__link" href="#">Shop</a>
+                            </li>
+
+                            <li class="sitenav__item">
+                                <a class="sitenav__link" href="#">Contact</a>
+                            </li>
+                        </ul>
+
+                        <button class="button button__sitenav">Sign up</button>
+                    </nav>
+                </header>
+
+                <div class="hero">
+                   <div class="hero__left">
+                    <div class="hero__span-wrapper">
+                        <span class="hero__span">MIKE LEWIS</span>
+                        <span class="hero__span-personal">
+                            PERSONAL BRANDING
+                        </span>
+                    </div>
+
+                    <h1 class="hero__heading">
+                        Everyday is
+                        Chance to Learn
+                        New Things
+                    </h1>
+                    <p class="hero__desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra laoreet in est tortor quam pretium tellus pretium sit.
+                    </p>
+
+                    <div class="hero__btn-wrapper">
+                        <a class="button-pink" href="#">Start Listening</a>
+                        <a class="button button__hero" href="#">
+                            See all Episodes
+                        </a>
+                    </div>
+
+                    <span class="hero__last-span">ALSO FIND US ON :</span>
+
+                    <div class="hero__img-wrapper">
+                        <img class="hero__img" src="./images/spotify.png" alt="spotify" width="85" height="24" srcset="./images/spotify.png 1x, ./images/spotify@2x.png 2x">
+
+                        <img class="hero__img" src="./images/apple.png" alt="spotify" width="129" height="31" srcset="./images/apple.png 1x, ./images/apple@2x.png 2x">
+
+                        <img class="hero__img" src="./images/youtube.png" alt="spotify" width="91" height="20" srcset="./images/youtube.png 1x, ./images/youtube@2x.png 2x">
+                    </div>
+
+                   </div>
+
+                    <img class="hero__last-img" src="./images/man.png" alt="mans" width="609" height="603" srcset="./images/man.png 1x, ./images/man@2x.png 2x">
+                </div>
+            </div>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
